<resources>
    <string name="app_name">Itfamili</string>
    <string name="enter_code">کد ارسال شده را وارد نمایید</string>
    <string name="enter_phone">شماره موبایل خود را وارد نمایید</string>
    <string name="error">خطا</string>
    <string name="skip">رد شدن</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="androidErrorRequest">خطا در برقراری ارتباط.</string>
    <string name="it_news">آخرین اخبار روز آی.تی</string>
    <string name="it_video">ویدیوهای مربوط به آی.تی</string>
    <string name="it_podcast">پادکست های مربوط به آی.تی</string>
    <string name="it_blog">مقالات مربوط به آی.تی</string>
    <string name="it_title">آخرین شماره های نشریه آی.تی</string>


    <string name="ar_init_text">Loading AR Experience ...</string>
    <string name="ar_installgpsar_text">Installing Google Play Services for AR ...</string>
    <string name="ar_notsupported_text">AR is not supported on this device</string>
    <string name="ar_requiresandroid7plus_text">AR requires Android 7 or later</string>

    <string name="ar_pref_gotarcodeapktooold">gotARCodeApkTooOld</string>
    <string name="ar_pref_assetsstaged">assetsStaged</string>
    <string name="ar_fit_image_to_scan">Fit image to scan</string>
    <string name="ar_problem_with_db">Could not load AR database</string>
    <string name="commentHint">متن نظر</string>
    <string name="send">ارسال</string>
    <string name="selectItem">انتخاب نمایید</string>
    <string name="selectAge">انتخاب بازه سنی</string>
    <string name="email">ایمیل</string>
    <string name="education">تحصیلات</string>
    <string name="job">شغل</string>
    <string name="age">سن</string>
    <string name="search">جست و جو</string>
    <string name="all">همه</string>
    <string name="video">ویدیو</string>
    <string name="podcast">پادکست</string>
    <string name="blog">بلاگ</string>
    <string name="not_found">نتیجه ای یافت نشد</string>
</resources>
