<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_home"
    tools:context="com.zavosh.itfamily.fragments.GroupDetailsFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:elevation="@dimen/_4sdp"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/back"
                    android:id="@+id/img_back"

                    android:scaleType="fitXY"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="IT FAMILI"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/colorPrimaryDark"/>

                <ImageView
                    android:src="@drawable/menu"
                    android:padding="@dimen/_10sdp"
                    android:id="@+id/menu"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>


        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            app:tabRippleColor="@color/colorAccent"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/gray"
            app:tabIndicatorColor="@color/white"
            android:id="@+id/tabLayout"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blog" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/podcast" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView_group"/>


    </LinearLayout>
    <com.zavosh.itfamily.myviews.MyTextViewBold
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/_5sdp"
        android:gravity="center"
        android:textColor="@color/textColor"
        android:visibility="gone"
        android:id="@+id/tv_not_found"
        android:text="@string/not_found"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/loader_group"/>
</RelativeLayout>
