<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:elevation="@dimen/_4sdp"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="IT FAMILI"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/colorPrimaryDark"/>


            <ImageView
                android:src="@drawable/menu"
                android:padding="@dimen/_10sdp"
                android:id="@+id/img_menu"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_data_box"
        android:background="@drawable/background_profile"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <ImageView
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_width="@dimen/_30sdp"
            android:src="@android:drawable/ic_menu_edit"
            android:layout_height="@dimen/_30sdp"
            android:id="@+id/iv_edit"
            android:layout_marginTop="@dimen/_55sdp"/>
        <ImageView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_top"
            android:layout_gravity="center"
            android:layout_above="@+id/ll_box_profile"
            android:layout_centerHorizontal="true"/>
        <LinearLayout
            android:id="@+id/ll_box_profile"
            android:layout_centerInParent="true"
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:background="@drawable/cardview_background"
            android:layout_height="wrap_content">
            <com.zavosh.itfamily.myviews.MyEditText
                android:layout_marginBottom="@dimen/_5sdp"
                android:id="@+id/name_register"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:hint=" نام و نام خانوادگی"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/edit_text_background"/>

            <com.zavosh.itfamily.myviews.MyEditText
                android:gravity="center"
                android:layout_marginBottom="@dimen/_5sdp"
                android:id="@+id/phone_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:enabled="false"
                android:paddingRight="@dimen/_10sdp"
                android:hint="شماره موبایل"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/edit_text_background"/>

            <com.zavosh.itfamily.myviews.MyEditText
                android:gravity="center"
                android:layout_marginBottom="@dimen/_5sdp"
                android:id="@+id/email_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:hint="ایمیل"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/edit_text_background"/>

            <com.zavosh.itfamily.myviews.MyEditText
                android:focusable="false"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_5sdp"
                android:visibility="visible"
                android:id="@+id/etv_age"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:hint="@string/age"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/edit_text_background"/>

            <com.zavosh.itfamily.myviews.MyEditText
                android:focusable="false"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_5sdp"
                android:visibility="visible"
                android:id="@+id/etv_education"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:hint="@string/education"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/edit_text_background"/>

            <com.zavosh.itfamily.myviews.MyEditText
                android:gravity="center"
                android:focusable="false"
                android:layout_marginBottom="@dimen/_5sdp"
                android:visibility="visible"
                android:id="@+id/etv_job"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:hint="@string/job"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_12sdp"
                android:background="@drawable/edit_text_background"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/hint"
                android:textSize="12sp">


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.zavosh.itfamily.myviews.MyTextView
                        android:textSize="@dimen/_12sdp"
                        android:text="مرد"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>


                    <CheckBox
                        android:id="@+id/chk_male"
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <com.zavosh.itfamily.myviews.MyTextView
                        android:textSize="@dimen/_12sdp"
                        android:text="زن"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>


                    <CheckBox
                        android:id="@+id/chk_female"
                        android:layout_height="match_parent"
                        android:layout_width="wrap_content"
                        />

                </LinearLayout>

                <com.zavosh.itfamily.myviews.MyTextView
                    android:gravity="center"
                    android:textSize="@dimen/_12sdp"
                    android:text="جنسیت :"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>


            </LinearLayout>
        </LinearLayout>
        <ImageView android:layout_width="@dimen/_80sdp"
            android:id="@+id/btn_submit"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ll_box_profile"
            android:src="@drawable/register_button"
            android:layout_height="@dimen/_80sdp" />
    </RelativeLayout>




    <ProgressBar
        android:id="@+id/profile_loader"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>